--- a/oa-frontend/src/index.css
+++ b/oa-frontend/src/index.css
@@ -2,11 +2,117 @@
 @tailwind components;
 @tailwind utilities;
 
+@responsive {
+    .text-shadow {
+        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .text-shadow-md {
+        text-shadow: 0 4px 8px rgba(0, 0, 0, 0.12),
+            0 2px 4px rgba(0, 0, 0, 0.08);
+    }
+
+    .text-shadow-lg {
+        text-shadow: 0 15px 30px rgba(0, 0, 0, 0.11),
+            0 5px 15px rgba(0, 0, 0, 0.08);
+    }
+
+    .text-shadow-none {
+        text-shadow: none;
+    }
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+        'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.modal {
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    overflow: hidden;
+    position: fixed;
+    inset: 0px;
+    z-index: 50;
+}
+
+.modal,
+.modalPage {
+    transition: all 250ms ease-in-out;
+}
+
+.modal.ReactModal__Overlay .modalPage {
+    transform: translateY(-140px) rotate(30deg);
+}
+
+.modal.ReactModal__Overlay--after-open {
+    opacity: 1;
+}
+
+.modal.ReactModal__Overlay--after-open .modalPage {
+    transform: translateY(0) rotate(0deg);
+}
+
+.modal.ReactModal__Overlay--before-close {
+    opacity: 0;
+}
+
+.modal.ReactModal__Overlay--before-close .modalPage {
+    transform: translateY(140px) rotate(-30deg);
+    opacity: 0;
+}
+
+.page-enter {
+    opacity: 0;
+    transform: scale(1.2);
+    transform-origin: top;
+}
+.page-enter-active {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 300ms, transform 300ms;
+    transform-origin: top;
+}
+.page-exit {
+    opacity: 1;
+    transform: scale(1);
+    transform-origin: bottom;
+}
+.page-exit-active {
+    opacity: 0;
+    transform: scale(0.8);
+    transition: opacity 300ms, transform 300ms;
+    transform-origin: bottom;
+}
+
+.pageLeft-enter {
+    opacity: 0;
+    transform: scale(1.2);
+    transform-origin: left;
+}
+.pageLeft-enter-active {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 300ms, transform 300ms;
+    transform-origin: left;
+}
+.pageLeft-exit {
+    opacity: 1;
+    transform: scale(1);
+    transform-origin: left;
+}
+.pageLeft-exit-active {
+    opacity: 0;
+    transform: scale(0.8);
+    transition: opacity 300ms, transform 300ms;
+    transform-origin: left;
 }
